feat(reader): implement update reader use case